# auto-sbatch

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: flake8.yml  python-app.yml  quality.yml  tests.yml
auto_sbatch/: __init__.py  auto_sbatch.py  experiment_handler.py  grid_search.py  processes.py  register_run.py  registry.py  sbatch.py  slurm_script.py  utils.py
tests/: test_grid_search.py  test_sbatch.py  test_simple_job.py  test_slurm_script_parser.py  utils.py
