[tool.poetry]
name = "auto-sbatch"
version = "0.4.0"
description = "Create SLURM scripts automatically from your python script."
authors = ["bdvllrs <bdvllrs@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto_sbatch"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
types-pywin32 = "^306.0.0.2"
types-setuptools = "^67.8.0.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
register-run = "auto_sbatch.register_run:register_run"


[tool.isort]
profile = "black"
line_length = 88
py_version = 311

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
install_types = true
check_untyped_defs = true
